decompiler/tests/snapshots/test_tool__x86_64_callconv__func024.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func024 0x40117f+3 (file 0x117f)
          40117f: 89 d0                   mov eax,edx
          401181: c3                      ret

function type: "func024" func (arg0 small <TypeID(784v1)>,
                               arg1 int <TypeID(777v1)>) int <TypeID(777v1)>
0 warnings.


mil program = 
program  81 instrs
                 0 r12 <- Ancestral(AncestralName("stack_bottom"))
                 1 r2 <- Ancestral(AncestralName("CF"))
                 2 r3 <- Ancestral(AncestralName("PF"))
                 3 r4 <- Ancestral(AncestralName("AF"))
                 4 r5 <- Ancestral(AncestralName("ZF"))
                 5 r6 <- Ancestral(AncestralName("SF"))
                 6 r7 <- Ancestral(AncestralName("TF"))
                 7 r8 <- Ancestral(AncestralName("IF"))
                 8 r9 <- Ancestral(AncestralName("DF"))
                 9 r10 <- Ancestral(AncestralName("OF"))
                10 r11 <- Ancestral(AncestralName("RBP"))
                11 r12 <- Ancestral(AncestralName("RSP"))
                12 r13 <- Ancestral(AncestralName("RIP"))
                13 r14 <- Ancestral(AncestralName("RDI"))
                14 r15 <- Ancestral(AncestralName("RSI"))
                15 r16 <- Ancestral(AncestralName("RAX"))
                16 r17 <- Ancestral(AncestralName("RBX"))
                17 r18 <- Ancestral(AncestralName("RCX"))
                18 r19 <- Ancestral(AncestralName("RDX"))
                19 r20 <- Ancestral(AncestralName("R8"))
                20 r21 <- Ancestral(AncestralName("R9"))
                21 r22 <- Ancestral(AncestralName("R10"))
                22 r23 <- Ancestral(AncestralName("R11"))
                23 r24 <- Ancestral(AncestralName("R12"))
                24 r25 <- Ancestral(AncestralName("R13"))
                25 r26 <- Ancestral(AncestralName("R14"))
                26 r27 <- Ancestral(AncestralName("R15"))
                27 r28 <- Ancestral(AncestralName("ZMM0"))
                28 r29 <- Ancestral(AncestralName("ZMM1"))
                29 r30 <- Ancestral(AncestralName("ZMM2"))
                30 r31 <- Ancestral(AncestralName("ZMM3"))
                31 r32 <- Ancestral(AncestralName("ZMM4"))
                32 r33 <- Ancestral(AncestralName("ZMM5"))
                33 r34 <- Ancestral(AncestralName("ZMM6"))
                34 r35 <- Ancestral(AncestralName("ZMM7"))
                35 r36 <- Ancestral(AncestralName("ZMM8"))
                36 r37 <- Ancestral(AncestralName("ZMM9"))
                37 r38 <- Ancestral(AncestralName("ZMM10"))
                38 r39 <- Ancestral(AncestralName("ZMM11"))
                39 r40 <- Ancestral(AncestralName("ZMM12"))
                40 r41 <- Ancestral(AncestralName("ZMM13"))
                41 r42 <- Ancestral(AncestralName("ZMM14"))
                42 r43 <- Ancestral(AncestralName("ZMM15"))
                43 r44 <- Ancestral(AncestralName("memory"))
                44 r45 <- Undefined
                45 r46 <- Undefined
                46 r47 <- Undefined
                47 r48 <- Undefined
                48 r49 <- Undefined
                49 r50 <- Undefined
                50 r51 <- Undefined
                51 r52 <- Undefined
                52 r53 <- Undefined
                53 r54 <- Undefined
                54 r55 <- Undefined
                55 r56 <- Undefined
                56 r57 <- Undefined
                57 r58 <- Undefined
                58 r59 <- Undefined
                59 r60 <- Undefined
                60 r61 <- Undefined
                61 r62 <- Undefined
                62 r63 <- Undefined
                63 r64 <- Undefined
                64 r65 <- Undefined
                65 r45 <- Ancestral(AncestralName("arg0"))
                66 r46 <- Part { src: r45, offset: 0, size: 8 }
                67 r14 <- Get(r46)
                68 r47 <- Part { src: r45, offset: 8, size: 8 }
                69 r15 <- Get(r47)
                70 r48 <- Ancestral(AncestralName("arg1"))
                71 r49 <- Widen { reg: r48, target_size: 8, sign: false }
                72 r19 <- Get(r49)
0x40117f:
                73 r46 <- Part { src: r19, offset: 0, size: 4 }
                74 r47 <- Part { src: r16, offset: 4, size: 4 }
                75 r16 <- Concat { lo: r46, hi: r47 }
0x401181:
                76 r45 <- Void
                77 r45 <- Concat { lo: r45, hi: r16 }
                78 r45 <- Part { src: r45, offset: 0, size: 4 }
                79 r47 <- SetReturnValue(r45)
                80 r47 <- Control(Ret)


ssa pre-xform:
ssa program  81 instrs
.B0:    ;;  → Always(Return).
         r15 <- Ancestral(AncestralName("RAX"))
         r70 <- Ancestral(AncestralName("arg1"))
         r71 <- Widen { reg: r70, target_size: 8, sign: false }
         r73 <- Part { src: r71, offset: 0, size: 4 }
         r74 <- Part { src: r15, offset: 4, size: 4 }
         r75 <- Concat { lo: r73, hi: r74 }
         r77 <- Concat { lo: r76, hi: r75 }
         r78 <- Part { src: r77, offset: 0, size: 4 }
         r79 <- SetReturnValue(r78)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r15, r70, r71, r73, r74, r75, r76, r77, r78, r79]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  81 instrs
.B0:    ;;  → Always(Return).
         r15 <- Ancestral(AncestralName("RAX"))
  (  5)  r70 <- Ancestral(AncestralName("arg1"))
         r71 <- Widen { reg: r70, target_size: 8, sign: false }
         r73 <- Get(r70)
         r74 <- Part { src: r15, offset: 4, size: 4 }
         r75 <- Concat { lo: r70, hi: r74 }
         r77 <- Get(r75)
         r78 <- Get(r70)
         r79 <- SetReturnValue(r70)



T0: {
  ;
  return pre:arg1
}
