decompiler/tests/snapshots/test_tool__x86_64_callconv__func031.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func031 0x401197+5 (file 0x1197)
          401197: 66 0f 6e c1             movd xmm0,ecx
          40119b: c3                      ret

function type: "func031" func (arg0 small <TypeID(785v1)>,
                               arg1 small <TypeID(785v1)>) float <TypeID(783v1)>
0 warnings.


mil program = 
program  81 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
   43 r45: TypeID(2v1) <- Undefined
   44 r46: TypeID(2v1) <- Undefined
   45 r47: TypeID(2v1) <- Undefined
   46 r48: TypeID(2v1) <- Undefined
   47 r49: TypeID(2v1) <- Undefined
   48 r50: TypeID(2v1) <- Undefined
   49 r51: TypeID(2v1) <- Undefined
   50 r52: TypeID(2v1) <- Undefined
   51 r53: TypeID(2v1) <- Undefined
   52 r54: TypeID(2v1) <- Undefined
   53 r55: TypeID(2v1) <- Undefined
   54 r56: TypeID(2v1) <- Undefined
   55 r57: TypeID(2v1) <- Undefined
   56 r58: TypeID(2v1) <- Undefined
   57 r59: TypeID(2v1) <- Undefined
   58 r60: TypeID(2v1) <- Undefined
   59 r61: TypeID(2v1) <- Undefined
   60 r62: TypeID(2v1) <- Undefined
   61 r63: TypeID(2v1) <- Undefined
   62 r64: TypeID(2v1) <- Undefined
   63 r65: TypeID(2v1) <- Undefined
   64 r45: TypeID(2v1) <- Ancestral(AncestralName("arg0"))
   65 r46: TypeID(2v1) <- Part { src: r45, offset: 0, size: 8 }
   66 r15: TypeID(2v1) <- Get(r46)
   67 r47: TypeID(2v1) <- Part { src: r45, offset: 8, size: 8 }
   68 r19: TypeID(2v1) <- Get(r47)
   69 r48: TypeID(2v1) <- Ancestral(AncestralName("arg1"))
   70 r49: TypeID(2v1) <- Part { src: r48, offset: 0, size: 8 }
   71 r18: TypeID(2v1) <- Get(r49)
   72 r50: TypeID(2v1) <- Part { src: r48, offset: 8, size: 8 }
   73 r20: TypeID(2v1) <- Get(r50)
0x401197:
   74 r45: TypeID(2v1) <- NotYetImplemented("unsupported: movd xmm0,ecx")
0x40119b:
   75 r45: TypeID(2v1) <- Void
   76 r46: TypeID(2v1) <- Part { src: r28, offset: 0, size: 8 }
   77 r45: TypeID(2v1) <- Concat { lo: r45, hi: r46 }
   78 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 4 }
   79 r47: TypeID(2v1) <- SetReturnValue(r45)
   80 r47: TypeID(2v1) <- Control(Ret)


ssa pre-xform:
ssa program  81 instrs
.B0:    ;;  → Always(Return).
         r27: ? <- Ancestral(AncestralName("ZMM0"))
         r74: ? <- NotYetImplemented("unsupported: movd xmm0,ecx")
         r76: ? <- Part { src: r27, offset: 0, size: 8 }
         r77: ? <- Concat { lo: r75, hi: r76 }
         r78: ? <- Part { src: r77, offset: 0, size: 4 }
         r79: ? <- SetReturnValue(r78)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r27, r74, r75, r76, r77, r78, r79]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  81 instrs
.B0:    ;;  → Always(Return).
         r27: ? <- Ancestral(AncestralName("ZMM0"))
         r74: ? <- NotYetImplemented("unsupported: movd xmm0,ecx")
         r78: ? <- Part { src: r27, offset: 0, size: 4 }
         r79: ? <- SetReturnValue(r78)



T0: {
  TODO /* unsupported: movd xmm0,ecx */;
  ;
  return pre:ZMM0[4 .. 0]
}
