decompiler/tests/snapshots/test_tool__x86_64_callconv__func037.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func037 0x4011bf+7 (file 0x11bf)
          4011bf: f3 0f 10 44 24 08       movss xmm0,[rsp+8]
          4011c5: c3                      ret

function type: "func037" func (arg0 small <TypeID(785v1)>,
                               arg1 big <TypeID(795v1)>) float <TypeID(783v1)>
0 warnings.


mil program = 
program  55 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
   43 r45: TypeID(2v1) <- Ancestral(AncestralName("arg0"))
   44 r46: TypeID(2v1) <- Part { src: r45, offset: 0, size: 8 }
   45 r15: TypeID(2v1) <- Get(r46)
   46 r47: TypeID(2v1) <- Part { src: r45, offset: 8, size: 8 }
   47 r19: TypeID(2v1) <- Get(r47)
0x4011bf:
   48 r45: TypeID(2v1) <- NotYetImplemented("unsupported: movss xmm0,[rsp+8]")
0x4011c5:
   49 r45: TypeID(2v1) <- Void
   50 r46: TypeID(2v1) <- Part { src: r28, offset: 0, size: 8 }
   51 r45: TypeID(2v1) <- Concat { lo: r45, hi: r46 }
   52 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 4 }
   53 r47: TypeID(2v1) <- SetReturnValue(r45)
   54 r47: TypeID(2v1) <- Control(Ret)


ssa pre-xform:
ssa program  55 instrs
.B0:    ;;  → Always(Return).
         r27: ? <- Ancestral(AncestralName("ZMM0"))
         r48: ? <- NotYetImplemented("unsupported: movss xmm0,[rsp+8]")
         r50: ? <- Part { src: r27, offset: 0, size: 8 }
         r51: ? <- Concat { lo: r49, hi: r50 }
         r52: ? <- Part { src: r51, offset: 0, size: 4 }
         r53: ? <- SetReturnValue(r52)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r27, r48, r49, r50, r51, r52, r53]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  55 instrs
.B0:    ;;  → Always(Return).
         r27: ? <- Ancestral(AncestralName("ZMM0"))
         r48: ? <- NotYetImplemented("unsupported: movss xmm0,[rsp+8]")
         r52: ? <- Part { src: r27, offset: 0, size: 4 }
         r53: ? <- SetReturnValue(r52)



T0: {
  TODO /* unsupported: movss xmm0,[rsp+8] */;
  ;
  return pre:ZMM0[4 .. 0]
}
